deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: react-pod
  labels: 
    app: my-react-ap
spec:
  containers:
  - name: react-container
    image: 947841444229.dkr.ecr.us-east-2.amazonaws.com/react-image:e747ef30c025fc865280faeb0ca5641a2ea6ca26
    ports:
    - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-react-ap
  ports:
  - name: http
    port: 80
    targetPort: 3000
    nodePort: 30001
  type: NodePort
